version x.x.x
 Enhancements
 * Added --access option for Picasa, Blogger, and YouTube creation tasks.
 * Improved and expanded list fields for youtube, picasa, and blogger.

version 0.9.11
 Enhancements
 * Added --src and --dest options to allow specifying data sources and download destinations respectively.
 * Enabled fully positional command line arguments (e.g. "google docs get my_doc .")
 * Add command line arguments to --title option to form list of titles to delete/list/download
 * Added list fields for picasa list (see README.new-usage). Thanks ferranb!

 Bugfixes
 * (more certainly) enabled unicode support
 * Create missing intermediate folders when saving config file and/or data files.
 * Uploads to Docs correctly parse filenames with multiple '.' characters.
 * Verbosity of output settable in interactive mode.

version 0.9.10
 Enhancements
 * Follow XDG Base Directory Specification.
 * Refactored to include library support of v2 and v3 of the gdata protocol.
 * Allowed --no-convert option to upload arbitrary file types to Docs for Apps Premier users (?)
 * Enabled downloads of arbitrary file types from Docs.
 * Added many more list fields (e.g. birthday, company, relation) for Contacts service.

 Bugfixes
 * youtube list works without --owner flag again.
 * Picasa uploads are case-insensitive for file extensions.
 * (Probably) enabled unicode support.

version 0.9.9
 Enhancements
 * Enabled video upload and download for Picasa.
 * Added reminders for Calendar via --reminder option.
 * Added --owner option to specify other accounts to interact with (e.g. Picasa collaborative albums, listing videos from other YouTube accounts).
 * Added list styles for contacts.
 * Allow docs edit task to create folders.
 * Included workaround for downloading new-version documents.
 * Added debug, verbose, and quiet flag options.
 * Added configuration file option decode_utf_8 to automatically decode downloaded Google Docs.

 Bugfixes